
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "pulldown-cmark-node"
version = "1.0.0"
description = "Blazingly fast Markdown to HTML renderer for Node.js using Rust's pulldown-cmark."
repository = "https://github.com/ton-username/pulldown-cmark-node"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
pulldown-cmark = "0.13.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
